// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expandable vertical with subsection 1`] = `
<DocumentFragment>
  <nav
    aria-label="Jump to section"
    class="pf-v6-c-jump-links pf-m-vertical pf-m-expandable"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      >
        <div
          class="pf-v6-c-jump-links__toggle"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-label="Toggle jump links"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon pf-m-start"
            >
              <span
                class="pf-v6-c-jump-links__toggle-icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  viewBox="0 0 256 512"
                  width="1em"
                >
                  <path
                    d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                  />
                </svg>
              </span>
            </span>
            <span
              class="pf-v6-c-button__text"
            >
              Jump to section
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-jump-links__label"
        >
          Jump to section
        </div>
      </div>
      <ul
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-13"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-14"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Section with active subsection
                </span>
              </span>
            </a>
          </span>
          <ul
            class="pf-v6-c-jump-links__list"
            role="list"
          >
            <li
              aria-current="location"
              class="pf-v6-c-jump-links__item pf-m-current"
            >
              <span
                class="pf-v6-c-jump-links__link"
              >
                <a
                  aria-disabled="false"
                  class="pf-v6-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-15"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  href="#"
                >
                  <span
                    class="pf-v6-c-button__text"
                  >
                    <span
                      class="pf-v6-c-jump-links__link-text"
                    >
                      Active subsection
                    </span>
                  </span>
                </a>
              </span>
            </li>
            <li
              class="pf-v6-c-jump-links__item"
            >
              <span
                class="pf-v6-c-jump-links__link"
              >
                <a
                  aria-disabled="false"
                  class="pf-v6-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-16"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  href="#"
                >
                  <span
                    class="pf-v6-c-button__text"
                  >
                    <span
                      class="pf-v6-c-jump-links__link-text"
                    >
                      Inactive subsection
                    </span>
                  </span>
                </a>
              </span>
            </li>
            <li
              class="pf-v6-c-jump-links__item"
            >
              <span
                class="pf-v6-c-jump-links__link"
              >
                <a
                  aria-disabled="false"
                  class="pf-v6-c-button pf-m-link"
                  data-ouia-component-id="OUIA-Generated-Button-link-17"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  href="#"
                >
                  <span
                    class="pf-v6-c-button__text"
                  >
                    <span
                      class="pf-v6-c-jump-links__link-text"
                    >
                      Inactive subsection
                    </span>
                  </span>
                </a>
              </span>
            </li>
          </ul>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-18"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-19"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`jumplinks centered 1`] = `
<DocumentFragment>
  <nav
    class="pf-v6-c-jump-links pf-m-center"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      />
      <ul
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-4"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-5"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-6"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`jumplinks with label 1`] = `
<DocumentFragment>
  <nav
    aria-label="Jump to section"
    class="pf-v6-c-jump-links pf-m-center"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      >
        <div
          class="pf-v6-c-jump-links__label"
        >
          Jump to section
        </div>
      </div>
      <ul
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-7"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-8"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-9"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`simple jumplinks 1`] = `
<DocumentFragment>
  <nav
    class="pf-v6-c-jump-links"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      />
      <ul
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-1"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-2"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-3"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`vertical with label 1`] = `
<DocumentFragment>
  <nav
    aria-label="Jump to section"
    class="pf-v6-c-jump-links pf-m-vertical"
  >
    <div
      class="pf-v6-c-jump-links__main"
    >
      <div
        class="pf-v6-c-jump-links__header"
      >
        <div
          class="pf-v6-c-jump-links__label"
        >
          Jump to section
        </div>
      </div>
      <ul
        class="pf-v6-c-jump-links__list"
        role="list"
      >
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-10"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          aria-current="location"
          class="pf-v6-c-jump-links__item pf-m-current"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-11"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Active section
                </span>
              </span>
            </a>
          </span>
        </li>
        <li
          class="pf-v6-c-jump-links__item"
        >
          <span
            class="pf-v6-c-jump-links__link"
          >
            <a
              aria-disabled="false"
              class="pf-v6-c-button pf-m-link"
              data-ouia-component-id="OUIA-Generated-Button-link-12"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              href="#"
            >
              <span
                class="pf-v6-c-button__text"
              >
                <span
                  class="pf-v6-c-jump-links__link-text"
                >
                  Inactive section
                </span>
              </span>
            </a>
          </span>
        </li>
      </ul>
    </div>
  </nav>
</DocumentFragment>
`;
